@@ -1,4 +1,3 @@
-/*
 /*******************************************************************************
  * Copyright (C) 2018 MINHAFP, Gobierno de Espa&ntilde;a
  * This program is licensed and may be used, modified and redistributed under the  terms
@@ -34,7 +33,8 @@ import java.util.stream.StreamSupport;
 import javax.servlet.http.HttpServletRequest;
 import javax.validation.constraints.NotEmpty;
 
-import es.gob.fire.commons.log.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.json.JSONObject;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.MessageSource;
@@ -59,15 +59,13 @@ import es.gob.fire.i18n.IWebViewMessages;
 import es.gob.fire.i18n.Language;
 import es.gob.fire.persistence.dto.ApplicationDTO;
 import es.gob.fire.persistence.dto.ProviderApplicationDTO;
-import es.gob.fire.persistence.dto.ProviderDTO;
 import es.gob.fire.persistence.entity.Application;
 import es.gob.fire.persistence.entity.ApplicationResponsible;
 import es.gob.fire.persistence.entity.Certificate;
-import es.gob.fire.persistence.entity.ProviderApplication;
 import es.gob.fire.persistence.entity.User;
 import es.gob.fire.persistence.service.IApplicationService;
-import es.gob.fire.persistence.service.ICertificateService;
 import es.gob.fire.persistence.service.IProviderService;
+import es.gob.fire.service.ICertificateService;
 
 /**
  * <p>Class that manages the REST requests related to the Applications administration and JSON communication.</p>
@@ -80,7 +78,7 @@ public class ApplicationRestController {
 	/**
 	 * Attribute that represents the object that manages the log of the class.
 	 */
-	private static final Logger LOGGER = Logger.getLogger(ApplicationRestController.class);
+	private static final Logger LOGGER = LogManager.getLogger(ApplicationRestController.class);
 
 	/**
 	 * Attribute that represents the identifier of the selected alarms from the summary.
@@ -116,6 +114,16 @@ public class ApplicationRestController {
 	 * Constant that represents the field 'user'.
 	 */
 	private static final String FIELD_CERTIFICATE = "cert";
+	
+	/**
+	 * Constant that represents the field 'organization'.
+	 */
+	private static final String FIELD_ORGANIZATION = "organization";
+	
+	/**
+	 * Constant that represents the field 'dir3Code'.
+	 */
+	private static final String FIELD_DIR3CODE = "dir3Code";
 
 	/**
 	 * Attribute that represents the span text.
@@ -179,30 +187,10 @@ public class ApplicationRestController {
 	 */
 	@RequestMapping(path = "/previewCertApp", method = RequestMethod.GET)
 	public String previewCertApp(@RequestParam("idCertificate") final Long idCertificate) {
-
-		LOGGER.warn(" ======= /previewCertApp: Obtenemos los certificados asociados al ID: " + idCertificate);
-
-
 		String data = "";
 		final Certificate cert = this.certificateService.getCertificateByCertificateId(idCertificate);
-
-
-		LOGGER.warn(" ======= /previewCertApp: Hemos obtenido los certificados: " + cert);
-
-
-
-
 		if (cert != null) {
-
-			LOGGER.warn(" ======= /previewCertApp: Certificado principal: " + cert.getCertificate());
-
-
-
 			final String certPrincipal = this.certificateService.getCertificateText(cert.getCertificate());
-
-
-			LOGGER.warn(" ======= /previewCertApp: Texto del certificado principal: " + certPrincipal);
-
 			if(certPrincipal.isEmpty()) {
 				data += "--"; //$NON-NLS-1$
 			} else {
@@ -223,92 +211,98 @@ public class ApplicationRestController {
 	 * @return DataTablesOutput<Application>
 	 */
 	@RequestMapping(value = "/saveapp", method = RequestMethod.POST, produces = MediaType.APPLICATION_JSON_VALUE)
-	@JsonView(DataTablesOutput.View.class)
-	public @ResponseBody DataTablesOutput<Application> saveApplication(@RequestPart("appForm") final ApplicationDTO appForm, final HttpServletRequest request) {
-		final DataTablesOutput<Application> dtOutput = new DataTablesOutput<>();
-		
-		List<Application> listNewApplication = new ArrayList<>();
-		
-		final JSONObject json = new JSONObject();
-		
-		//Lista de usuarios
-		final List<Long> listUsers = new ArrayList<>();
+	@JsonView(Application.class)
+	public ResponseEntity<?> saveApplication(@RequestPart("appForm") final ApplicationDTO appForm, final HttpServletRequest request) {
+	    // Objeto para acumular los mensajes de error
+	    final JSONObject json = new JSONObject();
+	    // Lista para almacenar las organizations encontradas según el dir3Code
+	    List<String> availableOrganizations = new ArrayList<>();
 
-		if (!"-1".equals(appForm.getIdUsersSelected())) {
-			final String[] arrayUsers = appForm.getIdUsersSelected().split(",");
+	    // Procesar lista de usuarios responsables
+	    final List<Long> listUsers = new ArrayList<>();
+	    if (!"-1".equals(appForm.getIdUsersSelected())) {
+	        final String[] arrayUsers = appForm.getIdUsersSelected().split(",");
+	        for (final String userId : arrayUsers) {
+	            listUsers.add(Long.valueOf(userId));
+	        }
+	    }
 
-			for(int i=0; i < arrayUsers.length;i++){
-				listUsers.add(new Long(arrayUsers[i]));
-			}
-		}
+	    // Procesar lista de certificados
+	    final List<Long> listCertificates = new ArrayList<>();
+	    if (!"-1".equals(appForm.getIdCertificatesSelected())) {
+	        final String[] arrayCertificates = appForm.getIdCertificatesSelected().split(",");
+	        for (final String certId : arrayCertificates) {
+	            listCertificates.add(Long.valueOf(certId));
+	        }
+	    }
 
-		//Lista de certificados
-		final List<Long> listCertificates = new ArrayList<>();
-		
-		if (!"-1".equals(appForm.getIdCertificatesSelected())) {
-			final String[] arrayCertificates = appForm.getIdCertificatesSelected().split(",");
-			
-			for(int i=0; i < arrayCertificates.length;i++){
-				listCertificates.add(new Long(arrayCertificates[i]));
-			}
-		}
+	    // Procesar proveedores personalizados
+	    List<ProviderApplicationDTO> customProviders = new ArrayList<>();
+	    if (appForm.getCustomProviders() != null && !appForm.getCustomProviders().isEmpty()) {
+	        customProviders = appForm.getCustomProviders();
+	    }
 
-		//Proveedores
-		List<ProviderApplicationDTO> customProviders = new ArrayList<>();
-		if (appForm.getCustomProviders() != null && !appForm.getCustomProviders().isEmpty()) {
-			customProviders = appForm.getCustomProviders();
-		}
+	    // Bandera para detectar si existe algún error de validación
+	    boolean hasError = false;
 
-		//Comprobaciones de inputs
-		if (isAppNameBlank(appForm.getAppName()) || isAppNameSizeNotValid(appForm.getAppName()) || !isResponsibleSelected(listUsers) || !isCertificatesSelected(listCertificates)) {
+	    // Validación del nombre de la aplicación
+	    if (isAppNameBlank(appForm.getAppName())) {
+	        final String errorValEmptyAppName = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APPNAME_REQUIRED, null, request.getLocale());
+	        json.put(FIELD_APP_NAME + SPAN, errorValEmptyAppName);
+	        hasError = true;
+	    }
+	    if (isAppNameSizeNotValid(appForm.getAppName())) {
+	        final String errorValSizeAppName = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APPNAME_SIZE, null, request.getLocale());
+	        json.put(FIELD_APP_NAME + SPAN, errorValSizeAppName);
+	        hasError = true;
+	    }
+	    // Validación de la selección de responsables
+	    if (!isResponsibleSelected(listUsers)) {
+	        final String errorValRespSelected = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APP_USER_SELECTED, null, request.getLocale());
+	        json.put(FIELD_RESPONSIBLE + SPAN, errorValRespSelected);
+	        hasError = true;
+	    }
+	    // Validación de la selección de certificados
+	    if (!isCertificatesSelected(listCertificates)) {
+	        final String errorValCertSelected = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APP_CERT_SELECTED, null, request.getLocale());
+	        json.put(FIELD_CERTIFICATE + SPAN, errorValCertSelected);
+	        hasError = true;
+	    }
+	    // Validación de organization y dir3Code
+	    if (appForm.getDir3Code() != null && !appForm.getDir3Code().isEmpty() && !appForm.getUpdateOrganization()) {
+	        availableOrganizations = this.appService.findOrganizationByDIR3(appForm.getDir3Code());
+	        if (availableOrganizations != null && !availableOrganizations.isEmpty()) {
+	            if (!availableOrganizations.contains(appForm.getOrganization())) {
+	                // Se añade la organization que se intenta guardar
+	                availableOrganizations.add(appForm.getOrganization());
+	                final String errorMsg = "El código DIR3 " + appForm.getDir3Code() + " ya está asociado a las siguientes organizations: " + availableOrganizations + ". Seleccione una de ellas.";
+	                json.put(FIELD_DIR3CODE + SPAN, errorMsg);
+	                hasError = true;
+	            }
+	        }
+	    }
 
-			if (isAppNameBlank(appForm.getAppName())) {
+	    // Si se encontraron errores de validación, se retorna un ResponseEntity con el error y la lista de organizations
+	    if (hasError) {
+	        final JSONObject errorResponse = new JSONObject();
+	        errorResponse.put("error", json.toString());
+	        errorResponse.put("organizations", availableOrganizations);
+	        return ResponseEntity.badRequest().body(errorResponse.toString());
+	    }
 
-				final String errorValEmptyAppName = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APPNAME_REQUIRED, null, request.getLocale());
-
-				json.put(FIELD_APP_NAME + SPAN, errorValEmptyAppName);
-			}
-
-			if (isAppNameSizeNotValid(appForm.getAppName())) {
-
-				final String errorValSizeAppName = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APPNAME_SIZE, null, request.getLocale());
-
-				json.put(FIELD_APP_NAME + SPAN, errorValSizeAppName);
-			}
-
-			if (!isResponsibleSelected(listUsers)) {
-
-				final String errorValRespSelected = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APP_USER_SELECTED, null, request.getLocale());
-
-				json.put(FIELD_RESPONSIBLE + SPAN, errorValRespSelected);
-			}
-			
-			if (!isCertificatesSelected(listCertificates)) {
-				
-				final String errorValRespSelected = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APP_CERT_SELECTED, null, request.getLocale());
-
-				json.put(FIELD_CERTIFICATE + SPAN, errorValRespSelected);
-			}
-
-			dtOutput.setError(json.toString());
-
-		} else {
-			try {
-				final Application newApp = this.appService.saveApplication(appForm, listUsers, listCertificates, customProviders);
-
-				listNewApplication.add(newApp);
-
-			} catch (final GeneralSecurityException e) {
-				LOGGER.error(Language.getResWebFire(IWebLogMessages.ERRORWEB022), e);
-				listNewApplication = StreamSupport.stream(this.appService.getAllApplication().spliterator(), false).collect(Collectors.toList());
-				json.put(KEY_JS_ERROR_SAVE_APP, Language.getResWebFire(IWebLogMessages.ERRORWEB022));
-				dtOutput.setError(json.toString());
-			}
-		}
-
-		dtOutput.setData(listNewApplication);
-
-		return dtOutput;
+	    try {
+	    	if (appForm.getUpdateOrganization()) {
+	    		int appsUpdated = this.appService.renameOrganizationByDir3Code(appForm.getDir3Code(), appForm.getOrganization());
+	    	}
+	        final Application newApp = this.appService.saveApplication(appForm, listUsers, listCertificates, customProviders);
+	        return ResponseEntity.ok(newApp);
+	    } catch (final Exception e) {
+	        LOGGER.error(Language.getResWebFire(IWebLogMessages.ERRORWEB022), e);
+	        json.put(KEY_JS_ERROR_SAVE_APP, Language.getResWebFire(IWebLogMessages.ERRORWEB022));
+	        final JSONObject errorResponse = new JSONObject();
+	        errorResponse.put("error", json.toString());
+	        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(errorResponse.toString());
+	    }
 	}
 
 	/**
@@ -436,7 +430,7 @@ public class ApplicationRestController {
 	        return ResponseEntity.ok(savedAppDTO);
 	    } else {
 	        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-	                             .body(Collections.singletonMap("error", "Aplicación no encontrada"));
+	                             .body(Collections.singletonMap("error", "Aplicacion no encontrada"));
 	    }
 	}
 	
